Revision history for {{$dist->name}}

{{$NEXT}}

0.8       2012-10-10 08:54:47 EST5EDT
  - include META.json

0.7       2012-10-03 17:51:16 America/New_York

0.6       2012-10-02 15:12:10 America/New_York
  - use OurPkgVersion when [@Author::Plicease] is used

0.5       2012-10-02 15:07:25 America/New_York
  - use OurPkgVersion for Dist::Zilla

0.4       2012-08-29 08:01:22 America/New_York
  - add xt/release tests to skel
  - update xt/release tests from profile
  - Removed use test for devdoc
  - Don't use [ExtraTests]

0.3       2012-08-12 15:36:35 America/New_York
  - Remove dep on IO::File::Closure.  Use Path::Class instead.
  - Remove devdoc (it wasn't really working right anyway)

0.2       2012-08-11 13:13:39 America/New_York
  - Fix deps on [GitHub]
  - Allow dirty README.pod

0.1       2012-07-30 22:51:14 EST5EDT
  - initial version