@@ -20,6 +20,10 @@ version = 0.8
 
 [Prereqs]
 Dist::Zilla::Plugin::OurPkgVersion = 0
+; not strictly needed, but I like to have this
+; installed, and if you try to inherit this
+; it gives a different error message if
+; it isn't installed that you usually get
 Dist::Zilla::Plugin::MakeMaker::Awesome = 0
 
 [@Git]
